Resolve SonarQube issues